@@ -370,12 +370,12 @@ hash_pointer hash_end= hash+hash_size-1;
 hash_pointer h;
 
 /*:46*//*65:*/
-#line 1003 "cwebdir/common.w"
+#line 1001 "cwebdir/common.w"
 
 int history= spotless;
 
 /*:65*//*73:*/
-#line 1126 "cwebdir/common.w"
+#line 1124 "cwebdir/common.w"
 
 int argc;
 char**argv;
@@ -385,11 +385,11 @@ char idx_file_name[max_file_name_length];
 #line 453 "cwebdir/comm-w2c.ch"
 char scn_file_name[max_file_name_length];
 char check_file_name[max_file_name_length];
-#line 1133 "cwebdir/common.w"
+#line 1131 "cwebdir/common.w"
 boolean flags[128];
 
 /*:73*//*83:*/
-#line 1267 "cwebdir/common.w"
+#line 1265 "cwebdir/common.w"
 
 FILE*C_file;
 FILE*tex_file;
@@ -398,7 +398,7 @@ FILE*scn_file;
 #line 583 "cwebdir/comm-w2c.ch"
 FILE*active_file;
 FILE*check_file;
-#line 1273 "cwebdir/common.w"
+#line 1271 "cwebdir/common.w"
 
 #line 600 "cwebdir/comm-w2c.ch"
 /*:83*//*86:*/
@@ -471,18 +471,18 @@ static void prime_the_change_buffer(void);
 static void check_change(void);
 
 /*:33*//*55:*/
-#line 764 "cwebdir/common.w"
+#line 762 "cwebdir/common.w"
 
 static int web_strcmp(char*,size_t,char*,size_t);
 static name_pointer add_section_name(name_pointer,int,char*,char*,boolean);
 static void extend_section_name(name_pointer,char*,char*,boolean);
 
 /*:55*//*64:*/
-#line 991 "cwebdir/common.w"
+#line 989 "cwebdir/common.w"
 static int section_name_cmp(char**,size_t,name_pointer);
 
 /*:64*//*76:*/
-#line 1186 "cwebdir/common.w"
+#line 1184 "cwebdir/common.w"
 static void scan_args(void);
 
 #line 513 "cwebdir/comm-w2c.ch"
@@ -548,11 +548,11 @@ textdomain("cweb");
 #line 85 "cwebdir/comm-w2c.ch"
 
 /*74:*/
-#line 1139 "cwebdir/common.w"
+#line 1137 "cwebdir/common.w"
 
 #line 460 "cwebdir/comm-w2c.ch"
 make_xrefs= true;
-#line 1141 "cwebdir/common.w"
+#line 1139 "cwebdir/common.w"
 
 /*:74*/
 #line 86 "cwebdir/comm-w2c.ch"
@@ -611,7 +611,7 @@ fatal(_("! Cannot open output file "),check_file_name);
 else if((tex_file= fopen(tex_file_name,"wb"))==NULL)
 fatal(_("! Cannot open output file "),tex_file_name);
 }
-#line 1285 "cwebdir/common.w"
+#line 1283 "cwebdir/common.w"
 
 #line 618 "cwebdir/comm-w2c.ch"
 /*:84*/
@@ -1022,10 +1022,8 @@ if(name_ptr>=name_dir_end)overflow(_("name"));
 strncpy(byte_ptr,first,l);
 (++name_ptr)->byte_start= byte_ptr+= l;
 #line 306 "cwebdir/comm-w2c.ch"
-if(program!=ctangle){
+if(program!=ctangle)p->ilk= t,init_node(p);
 #line 680 "cwebdir/common.w"
-p->ilk= t;init_node(p);
-}
 }
 
 /*:51*/
@@ -1035,7 +1033,7 @@ return p;
 }
 
 /*:48*//*52:*/
-#line 708 "cwebdir/common.w"
+#line 706 "cwebdir/common.w"
 
 void
 print_section_name(
@@ -1054,7 +1052,7 @@ if(q)term_write("...",3);
 }
 
 /*:52*//*53:*/
-#line 725 "cwebdir/common.w"
+#line 723 "cwebdir/common.w"
 
 void
 sprint_section_name(
@@ -1074,7 +1072,7 @@ s= p->byte_start;
 }
 
 /*:53*//*54:*/
-#line 743 "cwebdir/common.w"
+#line 741 "cwebdir/common.w"
 
 void
 print_prefix_name(
@@ -1087,7 +1085,7 @@ if(s+l<(p+1)->byte_start)term_write("...",3);
 }
 
 /*:54*//*56:*/
-#line 769 "cwebdir/common.w"
+#line 767 "cwebdir/common.w"
 
 static int web_strcmp(
 char*j,
@@ -1105,7 +1103,7 @@ else return greater;
 }
 
 /*:56*//*57:*/
-#line 798 "cwebdir/common.w"
+#line 796 "cwebdir/common.w"
 
 static name_pointer
 add_section_name(
@@ -1121,7 +1119,7 @@ size_t name_len= (size_t)(last-first+(int)ispref);
 #line 313 "cwebdir/comm-w2c.ch"
 if(s+name_len> byte_mem_end)overflow(_("byte memory"));
 if(name_ptr+1>=name_dir_end)overflow(_("name"));
-#line 812 "cwebdir/common.w"
+#line 810 "cwebdir/common.w"
 (++name_ptr)->byte_start= byte_ptr= s+name_len;
 if(ispref){
 *(byte_ptr-1)= ' ';
@@ -1137,7 +1135,7 @@ return par==NULL?(root= p):c==less?(par->llink= p):(par->rlink= p);
 }
 
 /*:57*//*58:*/
-#line 826 "cwebdir/common.w"
+#line 824 "cwebdir/common.w"
 
 static void
 extend_section_name(
@@ -1151,21 +1149,21 @@ name_pointer q= p+1;
 size_t name_len= (size_t)(last-first+(int)ispref);
 #line 320 "cwebdir/comm-w2c.ch"
 if(name_ptr>=name_dir_end)overflow(_("name"));
-#line 838 "cwebdir/common.w"
+#line 836 "cwebdir/common.w"
 while(q->link!=name_dir)q= q->link;
 q->link= name_ptr;
 s= name_ptr->byte_start;
 name_ptr->link= name_dir;
 #line 326 "cwebdir/comm-w2c.ch"
 if(s+name_len> byte_mem_end)overflow(_("byte memory"));
-#line 843 "cwebdir/common.w"
+#line 841 "cwebdir/common.w"
 (++name_ptr)->byte_start= byte_ptr= s+name_len;
 strncpy(s,first,name_len);
 if(ispref)*(byte_ptr-1)= ' ';
 }
 
 /*:58*//*59:*/
-#line 854 "cwebdir/common.w"
+#line 852 "cwebdir/common.w"
 
 name_pointer
 section_lookup(
@@ -1180,7 +1178,7 @@ name_pointer par= NULL;
 
 size_t name_len= (size_t)(last-first+1);
 /*60:*/
-#line 878 "cwebdir/common.w"
+#line 876 "cwebdir/common.w"
 
 while(p){
 c= web_strcmp(first,name_len,first_chunk(p),prefix_length(p));
@@ -1192,12 +1190,12 @@ p= (c==less?p->llink:p->rlink);
 if(r!=NULL){
 #line 332 "cwebdir/comm-w2c.ch"
 fputs(_("\n! Ambiguous prefix: matches <"),stdout);
-#line 888 "cwebdir/common.w"
+#line 886 "cwebdir/common.w"
 
 print_prefix_name(p);
 #line 338 "cwebdir/comm-w2c.ch"
 fputs(_(">\n and <"),stdout);
-#line 891 "cwebdir/common.w"
+#line 889 "cwebdir/common.w"
 print_prefix_name(r);
 err_print(">");
 return name_dir;
@@ -1211,19 +1209,19 @@ p= q,q= NULL;
 }
 
 /*:60*/
-#line 868 "cwebdir/common.w"
+#line 866 "cwebdir/common.w"
 
 /*61:*/
-#line 903 "cwebdir/common.w"
+#line 901 "cwebdir/common.w"
 
 if(r==NULL)
 return add_section_name(par,c,first,last+1,ispref);
 
 /*:61*/
-#line 869 "cwebdir/common.w"
+#line 867 "cwebdir/common.w"
 
 /*62:*/
-#line 911 "cwebdir/common.w"
+#line 909 "cwebdir/common.w"
 
 switch(section_name_cmp(&first,name_len,r)){
 
@@ -1231,7 +1229,7 @@ case prefix:
 if(!ispref){
 #line 344 "cwebdir/comm-w2c.ch"
 fputs(_("\n! New name is a prefix of <"),stdout);
-#line 917 "cwebdir/common.w"
+#line 915 "cwebdir/common.w"
 
 print_section_name(r);
 err_print(">");
@@ -1245,7 +1243,7 @@ break;
 case bad_extension:
 #line 350 "cwebdir/comm-w2c.ch"
 fputs(_("\n! New name extends <"),stdout);
-#line 929 "cwebdir/common.w"
+#line 927 "cwebdir/common.w"
 
 print_section_name(r);
 err_print(">");
@@ -1253,24 +1251,24 @@ break;
 default:
 #line 356 "cwebdir/comm-w2c.ch"
 fputs(_("\n! Section name incompatible with <"),stdout);
-#line 935 "cwebdir/common.w"
+#line 933 "cwebdir/common.w"
 
 print_prefix_name(r);
 #line 362 "cwebdir/comm-w2c.ch"
 fputs(_(">,\n which abbreviates <"),stdout);
-#line 938 "cwebdir/common.w"
+#line 936 "cwebdir/common.w"
 print_section_name(r);
 err_print(">");
 }
 return r;
 
 /*:62*/
-#line 870 "cwebdir/common.w"
+#line 868 "cwebdir/common.w"
 
 }
 
 /*:59*//*63:*/
-#line 959 "cwebdir/common.w"
+#line 957 "cwebdir/common.w"
 
 static int section_name_cmp(
 char**pfirst,
@@ -1304,7 +1302,7 @@ default:return c;
 }
 
 /*:63*//*66:*/
-#line 1013 "cwebdir/common.w"
+#line 1011 "cwebdir/common.w"
 
 void
 err_print(
@@ -1312,7 +1310,7 @@ const char*s)
 {
 *s=='!'?printf("\n%s",s):printf("%s",s);
 if(web_file_open)/*67:*/
-#line 1032 "cwebdir/common.w"
+#line 1030 "cwebdir/common.w"
 
 {char*k,*l;
 if(changing&&include_depth==change_depth)
@@ -1320,7 +1318,7 @@ if(changing&&include_depth==change_depth)
 printf(_(". (l. %d of change file)\n"),change_line);
 else if(include_depth==0)printf(_(". (l. %d)\n"),cur_line);
 else printf(_(". (l. %d of include file %s)\n"),cur_line,cur_file_name);
-#line 1038 "cwebdir/common.w"
+#line 1036 "cwebdir/common.w"
 l= (loc>=limit?limit:loc);
 if(l> buffer){
 for(k= buffer;k<l;k++)
@@ -1335,13 +1333,13 @@ putchar(' ');
 }
 
 /*:67*/
-#line 1019 "cwebdir/common.w"
+#line 1017 "cwebdir/common.w"
 
 update_terminal();mark_error();
 }
 
 /*:66*//*68:*/
-#line 1065 "cwebdir/common.w"
+#line 1063 "cwebdir/common.w"
 
 int wrap_up(void){
 if(show_progress)new_line();
@@ -1349,7 +1347,7 @@ if(show_stats)
 print_stats();
 #line 400 "cwebdir/comm-w2c.ch"
 /*69:*/
-#line 1075 "cwebdir/common.w"
+#line 1073 "cwebdir/common.w"
 
 switch(history){
 #line 426 "cwebdir/comm-w2c.ch"
@@ -1361,7 +1359,7 @@ case error_message:
 puts(_("(Pardon me, but I think I spotted something wrong.)"));break;
 case fatal_message:default:
 puts(_("(That was a fatal error, my friend.)"));
-#line 1085 "cwebdir/common.w"
+#line 1083 "cwebdir/common.w"
 }
 
 /*:69*/
@@ -1386,11 +1384,11 @@ case harmless_message:return RETURN_WARN;
 case error_message:return RETURN_ERROR;
 case fatal_message:default:return RETURN_FAIL;
 }
-#line 1073 "cwebdir/common.w"
+#line 1071 "cwebdir/common.w"
 }
 
 /*:68*//*70:*/
-#line 1093 "cwebdir/common.w"
+#line 1091 "cwebdir/common.w"
 void
 fatal(
 const char*s,const char*t)
@@ -1401,19 +1399,19 @@ history= fatal_message;exit(wrap_up());
 }
 
 /*:70*//*71:*/
-#line 1104 "cwebdir/common.w"
+#line 1102 "cwebdir/common.w"
 void
 overflow(
 const char*t)
 {
 #line 439 "cwebdir/comm-w2c.ch"
 printf(_("\n! Sorry, %s capacity exceeded"),t);fatal("","");
-#line 1109 "cwebdir/common.w"
+#line 1107 "cwebdir/common.w"
 }
 
 
 /*:71*//*75:*/
-#line 1157 "cwebdir/common.w"
+#line 1155 "cwebdir/common.w"
 
 static void
 scan_args(void)
@@ -1436,10 +1434,10 @@ change_file_name[max_file_name_length-2]= '\0';
 #endif
 #line 491 "cwebdir/comm-w2c.ch"
 
-#line 1168 "cwebdir/common.w"
+#line 1166 "cwebdir/common.w"
  while(--argc> 0){
 if((**(++argv)=='-'||**argv=='+')&&*(*argv+1))/*80:*/
-#line 1245 "cwebdir/common.w"
+#line 1243 "cwebdir/common.w"
 
 #line 526 "cwebdir/comm-w2c.ch"
 {
@@ -1484,7 +1482,7 @@ if(sscanf(++dot_pos,"%u",&kpathsea_debug)!=1)/*81:*/
 
 cb_usage(program==ctangle?"ctangle":program==cweave?"cweave":"ctwill");
 
-#line 1260 "cwebdir/common.w"
+#line 1258 "cwebdir/common.w"
 
 #line 577 "cwebdir/comm-w2c.ch"
 /*:81*/
@@ -1499,11 +1497,11 @@ default:flags[(eight_bits)*dot_pos]= flag_change;continue;
 break;
 }
 }
-#line 1248 "cwebdir/common.w"
+#line 1246 "cwebdir/common.w"
 
 #line 569 "cwebdir/comm-w2c.ch"
 /*:80*/
-#line 1169 "cwebdir/common.w"
+#line 1167 "cwebdir/common.w"
 
 else{
 s= name_pos= *argv;dot_pos= NULL;
@@ -1514,20 +1512,20 @@ else if(*s==DIR_SEPARATOR||*s==DEVICE_SEPARATOR||*s=='/')
 dot_pos= NULL,name_pos= ++s;
 else s++;
 
-#line 1176 "cwebdir/common.w"
+#line 1174 "cwebdir/common.w"
 if(!found_web)/*77:*/
-#line 1195 "cwebdir/common.w"
+#line 1193 "cwebdir/common.w"
 
 {
 if(s-*argv> max_file_name_length-5)
 /*82:*/
 #line 577 "cwebdir/comm-w2c.ch"
 fatal(_("! Filename too long\n"),*argv);
-#line 1262 "cwebdir/common.w"
+#line 1260 "cwebdir/common.w"
 
 
 /*:82*/
-#line 1198 "cwebdir/common.w"
+#line 1196 "cwebdir/common.w"
 
 if(dot_pos==NULL)
 sprintf(web_file_name,"%s.w",*argv);
@@ -1535,7 +1533,7 @@ else{
 strcpy(web_file_name,*argv);
 *dot_pos= '\0';
 }
-#line 1206 "cwebdir/common.w"
+#line 1204 "cwebdir/common.w"
 sprintf(tex_file_name,"%s.tex",name_pos);
 sprintf(idx_file_name,"%s.idx",name_pos);
 sprintf(scn_file_name,"%s.scn",name_pos);
@@ -1544,10 +1542,10 @@ found_web= true;
 }
 
 /*:77*/
-#line 1177 "cwebdir/common.w"
+#line 1175 "cwebdir/common.w"
 
 else if(!found_change)/*78:*/
-#line 1213 "cwebdir/common.w"
+#line 1211 "cwebdir/common.w"
 
 {
 if(strcmp(*argv,"-")!=0){
@@ -1555,11 +1553,11 @@ if(s-*argv> max_file_name_length-4)
 /*82:*/
 #line 577 "cwebdir/comm-w2c.ch"
 fatal(_("! Filename too long\n"),*argv);
-#line 1262 "cwebdir/common.w"
+#line 1260 "cwebdir/common.w"
 
 
 /*:82*/
-#line 1217 "cwebdir/common.w"
+#line 1215 "cwebdir/common.w"
 
 if(dot_pos==NULL)
 sprintf(change_file_name,"%s.ch",*argv);
@@ -1569,21 +1567,21 @@ found_change= true;
 }
 
 /*:78*/
-#line 1178 "cwebdir/common.w"
+#line 1176 "cwebdir/common.w"
 
 else if(!found_out)/*79:*/
-#line 1225 "cwebdir/common.w"
+#line 1223 "cwebdir/common.w"
 
 {
 if(s-*argv> max_file_name_length-5)
 /*82:*/
 #line 577 "cwebdir/comm-w2c.ch"
 fatal(_("! Filename too long\n"),*argv);
-#line 1262 "cwebdir/common.w"
+#line 1260 "cwebdir/common.w"
 
 
 /*:82*/
-#line 1228 "cwebdir/common.w"
+#line 1226 "cwebdir/common.w"
 
 if(dot_pos==NULL){
 sprintf(tex_file_name,"%s.tex",*argv);
@@ -1601,18 +1599,18 @@ found_out= true;
 }
 
 /*:79*/
-#line 1179 "cwebdir/common.w"
+#line 1177 "cwebdir/common.w"
 
 else/*81:*/
 #line 569 "cwebdir/comm-w2c.ch"
 
 cb_usage(program==ctangle?"ctangle":program==cweave?"cweave":"ctwill");
 
-#line 1260 "cwebdir/common.w"
+#line 1258 "cwebdir/common.w"
 
 #line 577 "cwebdir/comm-w2c.ch"
 /*:81*/
-#line 1180 "cwebdir/common.w"
+#line 1178 "cwebdir/common.w"
 
 }
 }
@@ -1621,11 +1619,11 @@ if(!found_web)/*81:*/
 
 cb_usage(program==ctangle?"ctangle":program==cweave?"cweave":"ctwill");
 
-#line 1260 "cwebdir/common.w"
+#line 1258 "cwebdir/common.w"
 
 #line 577 "cwebdir/comm-w2c.ch"
 /*:81*/
-#line 1183 "cwebdir/common.w"
+#line 1181 "cwebdir/common.w"
 
 }
 
